Made navbar mobile responsive

--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,7 @@ body {
 .card-design {
   @apply bg-white rounded-lg shadow-md p-6;
 }
+
+.menubar-hover:hover {
+  @apply !text-indigo-600 !bg-gray-200;
+}
